[TECH] fix sonar